--- a/config.yml
+++ b/config.yml
@@ -10,3 +10,6 @@ notify_on_save: true
 first_run: false
 world:
   clear_mobs_on_reload: true
+data:
+  use_metadata: false
+use_alternate_locales: true
