--- a/store.yml
+++ b/store.yml
@@ -38,6 +38,14 @@ main:
           command: myz userdata $player toughness +1
           cost: 50.0
       children:
+        §rBack:
+          display:
+            ==: org.bukkit.inventory.ItemStack
+            type: NETHER_STAR
+            meta:
+              ==: ItemMeta
+              meta-type: UNSPECIFIC
+              display-name: §rBack
     '&eItems':
       display:
         ==: org.bukkit.inventory.ItemStack
@@ -125,6 +133,14 @@ main:
           command: give $player minecraft:apple 1 0
           cost: 11.0
       children:
+        §rBack:
+          display:
+            ==: org.bukkit.inventory.ItemStack
+            type: NETHER_STAR
+            meta:
+              ==: ItemMeta
+              meta-type: UNSPECIFIC
+              display-name: §rBack
   items:
     '&4Level Up':
       display:
