--- a/store.yml
+++ b/store.yml
@@ -132,6 +132,18 @@ main:
               - '§ePrice: §611 §ezPoints'
           command: give $player minecraft:apple 1 0
           cost: 11.0
+        add:
+          display:
+            ==: org.bukkit.inventory.ItemStack
+            type: STONE_BUTTON
+            meta:
+              ==: ItemMeta
+              meta-type: UNSPECIFIC
+              display-name: add
+              lore:
+              - '§ePrice: §625 §ezPoints'
+          command: Button
+          cost: 25.0
       children:
         §rBack:
           display:
