--- a/settings.yml
+++ b/settings.yml
@@ -75,6 +75,13 @@ visibility:
       Type95:
         shoot: 7
         reload: 2
+    in_dark: -3
+    in_vehicle: 4
+    in_diamond: 2
+    in_gold: 2
+    in_iron: 1
+    in_chainmail: 1
+    in_leather: -1
   environment:
     explosion: 6
     arrow_landed: 4
@@ -177,6 +184,7 @@ temperature:
     medium: 37.0
     warm: 39.9
     ocean: 30.5
+    fourth_dimension: 30.1
   modify:
     thirst:
       threshold: 3.0
@@ -231,6 +239,8 @@ temperature:
     sweat: 3
   modifier:
     near_snow: -5.1
+  minimum: 50.5
+  maximum: 147.3
 chest:
   respawn_time: 300
 airdrop:
@@ -248,6 +258,7 @@ spawnkit:
 spawn:
   safespawn_radius: 15
   clear_inventory: true
+  clear_armor: true
 hologram:
   display_ticks: 1
   display:
@@ -327,3 +338,7 @@ mobs:
     zombification: true
 dedicated:
   auto-respawn: false
+ender_travel_chance: 3
+camouflaged_duration: 20
+grenade_magnitude: 1.0
+grenade_magnitude_maximum: 9.0
