--- a/store.yml
+++ b/store.yml
@@ -132,17 +132,17 @@ main:
               - '§ePrice: §611 §ezPoints'
           command: give $player minecraft:apple 1 0
           cost: 11.0
-        add:
+        Button:
           display:
             ==: org.bukkit.inventory.ItemStack
             type: STONE_BUTTON
             meta:
               ==: ItemMeta
               meta-type: UNSPECIFIC
-              display-name: add
+              display-name: Button
               lore:
               - '§ePrice: §625 §ezPoints'
-          command: Button
+          command: give $player minecraft:stone_button 1
           cost: 25.0
       children:
         §rBack:
