--- a/highscores/stats.yml
+++ b/highscores/stats.yml
@@ -24,8 +24,8 @@ killer:
     owner: ''
     value: 0
   drown:
-    owner: ''
-    value: 0
+    owner: aa33e73b-a2d3-438d-8c41-daf4c4798f9d
+    value: 2
   fall:
     owner: cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf
     value: 3
@@ -72,7 +72,7 @@ drinks:
   value: 7
 deaths:
   owner: cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf
-  value: 1885
+  value: 2432
 heals:
   self:
     infection:
